[gd_scene load_steps=45 format=3 uid="uid://camns8fqod8d4"]

[ext_resource type="Script" path="res://source/match/Match.gd" id="1_1555u"]
[ext_resource type="Script" path="res://source/match/IsometricCamera3D.gd" id="1_qb2ry"]
[ext_resource type="Script" path="res://source/match/FogOfWar.gd" id="5_eb52t"]
[ext_resource type="PackedScene" uid="uid://co800e4shs7bh" path="res://source/generic-scenes-and-nodes/3d/RectangularSelection3D.tscn" id="5_yi0pu"]
[ext_resource type="PackedScene" uid="uid://clbjgy724q2si" path="res://source/generic-scenes-and-nodes/2d/DynamicCircle2D.tscn" id="6_ux0ef"]
[ext_resource type="Script" path="res://source/match/Terrain.gd" id="7_ccpu4"]
[ext_resource type="Script" path="res://source/match/Navigation.gd" id="10_1wfp1"]
[ext_resource type="PackedScene" uid="uid://b6n7cwv706x5n" path="res://source/match/debug/GodModeHud.tscn" id="10_p6gno"]
[ext_resource type="Shader" path="res://source/shaders/3d/fog.gdshader" id="10_weh6c"]
[ext_resource type="Shader" path="res://source/shaders/2d/blurr.gdshader" id="12_pow7t"]
[ext_resource type="PackedScene" uid="uid://cwefaix6rye6k" path="res://source/match/hud/ResourcesBar.tscn" id="12_r13sk"]
[ext_resource type="PackedScene" uid="uid://cwcedr6jj7yty" path="res://source/match/hud/UnitMenus.tscn" id="13_6cypl"]
[ext_resource type="Shader" path="res://source/shaders/3d/simple_fog_of_war.gdshader" id="13_jo8b7"]
[ext_resource type="PackedScene" uid="uid://nnsih72ih7qr" path="res://source/match/hud/ProductionQueue.tscn" id="13_qv3xn"]
[ext_resource type="PackedScene" uid="uid://dk7sa3fkyxks5" path="res://source/generic-scenes-and-nodes/control/RectangularSelection2D.tscn" id="16_ccb0o"]
[ext_resource type="Script" path="res://source/match/AirNavigation.gd" id="16_ravsv"]
[ext_resource type="Script" path="res://source/match/hud/Resources.gd" id="16_vjwpn"]
[ext_resource type="Script" path="res://source/match/hud/Minimap.gd" id="17_0bfte"]
[ext_resource type="Script" path="res://source/match/TerrainNavigation.gd" id="17_6fprk"]
[ext_resource type="Shader" path="res://source/shaders/2d/white_transparent.gdshader" id="19_m1b2v"]
[ext_resource type="PackedScene" uid="uid://c0uxy26e4qs4w" path="res://source/match/handlers/MouseClickAnimationsHandler.tscn" id="22_438pb"]
[ext_resource type="PackedScene" uid="uid://1rby73ckmk7b" path="res://source/match/Menu.tscn" id="22_ofmlu"]
[ext_resource type="PackedScene" uid="uid://b83l4dny3gly0" path="res://source/match/debug/FrameIncrementer.tscn" id="23_exhtd"]
[ext_resource type="PackedScene" uid="uid://c3xjdp2yrr1fu" path="res://source/match/debug/DiagnosticHud.tscn" id="23_pocq6"]
[ext_resource type="PackedScene" uid="uid://bocb7hjilvri5" path="res://source/match/handlers/ArealUnitSelectionHandler.tscn" id="24_aug7m"]
[ext_resource type="PackedScene" uid="uid://pi813oou7xim" path="res://source/match/handlers/DoubleClickUnitSelectionHandler.tscn" id="25_ldkhw"]
[ext_resource type="PackedScene" uid="uid://yn470qvc3eak" path="res://source/match/handlers/MatchEndHandler.tscn" id="26_4d7im"]
[ext_resource type="PackedScene" uid="uid://ck6vrgdyg7hja" path="res://source/match/handlers/UnitGroupSelectionHandler.tscn" id="27_j2drv"]
[ext_resource type="PackedScene" uid="uid://b8p6lcwubx1tp" path="res://source/match/handlers/UnitVisibilityHandler.tscn" id="32_fci1c"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ysb0j"]
sun_angle_max = 200.0

[sub_resource type="Sky" id="Sky_kunr4"]
sky_material = SubResource("ProceduralSkyMaterial_ysb0j")

[sub_resource type="Environment" id="Environment_qxcnu"]
background_mode = 2
background_energy_multiplier = 1.2
sky = SubResource("Sky_kunr4")
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 3
tonemap_exposure = 0.9
fog_light_color = Color(0.960784, 0.745098, 0.654902, 1)
fog_density = 0.0016
fog_height = 0.25
fog_height_density = 1.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qw0ps"]
render_priority = 0
shader = ExtResource("10_weh6c")
shader_parameter/color = Color(0.85, 0.6596, 0.578, 1)
shader_parameter/max_density_height = -0.5
shader_parameter/min_density_height = 0.4
shader_parameter/max_height = 9999.0
shader_parameter/min_height = -0.05

[sub_resource type="QuadMesh" id="QuadMesh_pv7fp"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c3tkw"]
shader = ExtResource("12_pow7t")
shader_parameter/blurr_factor = 1.0
shader_parameter/remove_alpha = false
shader_parameter/overlay = true

[sub_resource type="ViewportTexture" id="ViewportTexture_7yqgo"]
viewport_path = NodePath("FogOfWar/CombinedViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5rcuq"]
resource_local_to_scene = true
render_priority = 2
shader = ExtResource("13_jo8b7")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/texture_units_per_world_unit = 2
shader_parameter/debug_texture_view = false
shader_parameter/world_visibility_texture = SubResource("ViewportTexture_7yqgo")

[sub_resource type="QuadMesh" id="QuadMesh_xttrh"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="PlaneMesh" id="PlaneMesh_g1mtu"]
size = Vector2(50, 50)
center_offset = Vector3(25, 0, 25)

[sub_resource type="NavigationMesh" id="NavigationMesh_8emvl"]
geometry_source_geometry_mode = 2
geometry_source_group_name = &"air_navigation_input"
cell_size = 0.4
cell_height = 0.4
agent_height = 2.0
agent_radius = 0.8
agent_max_climb = 0.0

[sub_resource type="NavigationMesh" id="NavigationMesh_exfwj"]
geometry_parsed_geometry_type = 2
geometry_collision_mask = 4278190082
geometry_source_geometry_mode = 2
geometry_source_group_name = &"terrain_navigation_input"
agent_height = 2.0
agent_radius = 1.0
agent_max_climb = 0.0

[sub_resource type="ViewportTexture" id="ViewportTexture_vu2gm"]
viewport_path = NodePath("FogOfWar/CombinedViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3nec5"]
resource_local_to_scene = true
shader = ExtResource("19_m1b2v")
shader_parameter/reference_texture = SubResource("ViewportTexture_vu2gm")

[sub_resource type="ViewportTexture" id="ViewportTexture_8q44e"]
viewport_path = NodePath("HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport")

[node name="Match" type="Node3D"]
script = ExtResource("1_1555u")

[node name="Players" type="Node3D" parent="."]

[node name="IsometricCamera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 49.5996, 12.4465, 65.9216)
projection = 1
current = true
size = 15.0
script = ExtResource("1_qb2ry")
size_max = 60
bounding_planes = Array[Plane]([Plane(1, 0, 0, 0), Plane(-1, 0, 0, -50), Plane(0, 0, 1, 0), Plane(0, 0, -1, -50)])

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.512043, 0.673162, -0.533541, 0, 0.621148, 0.783694, 0.85896, -0.401285, 0.318054, 0, 38.7614, 0)
shadow_enabled = true
shadow_blur = 0.05
directional_shadow_split_1 = 0.45
directional_shadow_split_2 = 0.5
directional_shadow_split_3 = 0.55
directional_shadow_blend_splits = true
directional_shadow_pancake_size = 100.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qxcnu")

[node name="RectangularSelection3D" parent="." instance=ExtResource("5_yi0pu")]

[node name="Terrain" type="StaticBody3D" parent="."]
collision_mask = 0
script = ExtResource("7_ccpu4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Terrain"]

[node name="Fog" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_qw0ps")
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_pv7fp")

[node name="FogOfWar" type="Node3D" parent="."]
script = ExtResource("5_eb52t")

[node name="CombinedViewport" type="SubViewport" parent="FogOfWar"]
disable_3d = true
handle_input_locally = false
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="FogOfWar/CombinedViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FogViewportContainer" type="SubViewportContainer" parent="FogOfWar/CombinedViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FogViewport" type="SubViewport" parent="FogOfWar/CombinedViewport/FogViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(100, 100)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="EditorOnlyCircle" parent="FogOfWar/CombinedViewport" instance=ExtResource("6_ux0ef")]
position = Vector2(25, 25)
radius = 20

[node name="Revealer" type="ColorRect" parent="FogOfWar/CombinedViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurrOverlay" type="ColorRect" parent="FogOfWar/CombinedViewport"]
material = SubResource("ShaderMaterial_c3tkw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenOverlay" type="MeshInstance3D" parent="FogOfWar"]
material_override = SubResource("ShaderMaterial_5rcuq")
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_xttrh")

[node name="Navigation" type="Node3D" parent="."]
script = ExtResource("10_1wfp1")

[node name="Air" type="Node3D" parent="Navigation"]
script = ExtResource("16_ravsv")

[node name="ReferenceMesh" type="MeshInstance3D" parent="Navigation/Air" groups=["air_navigation_input"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
mesh = SubResource("PlaneMesh_g1mtu")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Navigation/Air"]
navigation_mesh = SubResource("NavigationMesh_8emvl")

[node name="Terrain" type="Node3D" parent="Navigation"]
script = ExtResource("17_6fprk")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="Navigation/Terrain"]
navigation_mesh = SubResource("NavigationMesh_exfwj")

[node name="Units" type="Node3D" parent="."]

[node name="Player0" type="Node3D" parent="Units"]

[node name="Player1" type="Node3D" parent="Units"]

[node name="Player2" type="Node3D" parent="Units"]

[node name="Player3" type="Node3D" parent="Units"]

[node name="Player4" type="Node3D" parent="Units"]

[node name="Player5" type="Node3D" parent="Units"]

[node name="Player6" type="Node3D" parent="Units"]

[node name="Player7" type="Node3D" parent="Units"]

[node name="Player8" type="Node3D" parent="Units"]

[node name="Player9" type="Node3D" parent="Units"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="RectangularSelection2D" parent="UI" instance=ExtResource("16_ccb0o")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -215.0
offset_right = 215.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 5

[node name="Minimap" type="PanelContainer" parent="HUD/MarginContainer"]
layout_mode = 2
script = ExtResource("17_0bfte")

[node name="MarginContainer" type="MarginContainer" parent="HUD/MarginContainer/Minimap"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MinimapViewport" type="SubViewport" parent="HUD/MarginContainer/Minimap/MarginContainer"]
disable_3d = true
size = Vector2i(100, 100)

[node name="Background" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.351562, 0.351562, 0.351562, 1)

[node name="EditorOnlyDummyUnit" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="EditorOnlyDummyUnit2" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport"]
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.25
offset_left = -1.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
color = Color(1, 0, 0, 1)

[node name="FogOfWarMask" type="ColorRect" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport"]
material = SubResource("ShaderMaterial_3nec5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CameraIndicator" type="Line2D" parent="HUD/MarginContainer/Minimap/MarginContainer/MinimapViewport"]
points = PackedVector2Array(5, 5, 5, 30, 30, 30, 30, 5, 5, 5)
width = 1.0
begin_cap_mode = 1
end_cap_mode = 1
antialiased = true

[node name="MinimapTextureRect" type="TextureRect" parent="HUD/MarginContainer/Minimap/MarginContainer"]
layout_mode = 2
texture = SubResource("ViewportTexture_8q44e")
stretch_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="HUD"]
offset_right = 40.0
offset_bottom = 11.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5

[node name="Resources" type="VBoxContainer" parent="HUD/MarginContainer2"]
layout_mode = 2
script = ExtResource("16_vjwpn")

[node name="ResourcesBar" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar2" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar3" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar4" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar5" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar6" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar7" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="ResourcesBar8" parent="HUD/MarginContainer2/Resources" instance=ExtResource("12_r13sk")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ProductionQueue" parent="HUD/MarginContainer3/VBoxContainer" instance=ExtResource("13_qv3xn")]
layout_mode = 2

[node name="UnitMenus" parent="HUD/MarginContainer3/VBoxContainer" instance=ExtResource("13_6cypl")]
layout_mode = 2
size_flags_horizontal = 8

[node name="Menu" parent="." instance=ExtResource("22_ofmlu")]
visible = false

[node name="Debug" type="Node3D" parent="."]

[node name="DiagnosticHUD" parent="Debug" instance=ExtResource("23_pocq6")]

[node name="GodModeHUD" parent="Debug" instance=ExtResource("10_p6gno")]

[node name="FrameIncrementer" parent="Debug" instance=ExtResource("23_exhtd")]

[node name="Handlers" type="Node3D" parent="."]

[node name="ArealUnitSelectionHandler" parent="Handlers" instance=ExtResource("24_aug7m")]
rectangular_selection_3d = NodePath("../../RectangularSelection3D")

[node name="DoubleClickUnitSelectionHandler" parent="Handlers" instance=ExtResource("25_ldkhw")]

[node name="MouseClickAnimationsHandler" parent="Handlers" instance=ExtResource("22_438pb")]

[node name="UnitGroupSelectionHandler" parent="Handlers" instance=ExtResource("27_j2drv")]

[node name="MatchEndHandler" parent="Handlers" instance=ExtResource("26_4d7im")]
visible = false

[node name="UnitVisibilityHandler" parent="Handlers" instance=ExtResource("32_fci1c")]
